# PSU-Control

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: basic_usage.py  data_logging.py
psu_control/: __init__.py  base.py  cli.py  cpx200dp.py  exceptions.py  it_n6332b.py  scpi.py  simulator.py
psu_control/web/: __init__.py  __main__.py  server.py
psu_control/web/static/: app.js  index.html  style.css
tests/: mock_instrument.py  test_cpx200dp.py  test_driver.py  test_web.py
